fix: reduce prominent checkbox spacing

--- a/src/Views/Form/Templates/Sequoia/assets/css/feerecovery.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/feerecovery.scss
@@ -31,6 +31,7 @@
 
 		@media screen and (max-width: $break-phone) {
 			font-size: 14px;
+			padding: 14px 20px 14px 22px !important;
 		}
 	}
 }
