--- a/src/Views/Form/Templates/Sequoia/assets/css/newsletter.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/newsletter.scss
@@ -35,6 +35,7 @@
 
 		@media screen and (max-width: $break-phone) {
 			font-size: 14px;
+			padding: 14px 20px 14px 22px !important;
 		}
 	}
 
