--- a/src/Views/Form/Templates/Sequoia/assets/css/recurring.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/recurring.scss
@@ -34,6 +34,7 @@
 
 		@media screen and (max-width: $break-phone) {
 			font-size: 14px !important;
+			padding: 14px 20px 14px 22px !important;
 		}
 	}
 
